Javaコース44 絞り込み検索機能の実装